--- a/WinkelService/WinkelService/App.config
+++ b/WinkelService/WinkelService/App.config
@@ -24,6 +24,19 @@
           </baseAddresses>
         </host>
       </service>
+      <service name="WinkelService.ProductService">
+        <endpoint address="" binding="basicHttpBinding" contract="WinkelService.IProductService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/WinkelService/ProductService/" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
