--- a/WinkelService/WinkelService/WinkelService.csproj
+++ b/WinkelService/WinkelService/WinkelService.csproj
@@ -35,22 +35,80 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoughtProduct.cs">
+      <DependentUpon>WinkelDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Customer.cs">
+      <DependentUpon>WinkelDatabaseModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ILoginService.cs" />
+    <Compile Include="IProductService.cs" />
     <Compile Include="LoginService.cs" />
+    <Compile Include="Product.cs">
+      <DependentUpon>WinkelDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WinkelDatabaseModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>WinkelDatabaseModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="WinkelDatabaseModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>WinkelDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="WinkelDatabaseModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>WinkelDatabaseModel.edmx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="WinkelDatabaseModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>WinkelDatabaseModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="packages.config" />
+    <None Include="WinkelDatabaseModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>WinkelDatabaseModel.Context.cs</LastGenOutput>
+      <DependentUpon>WinkelDatabaseModel.edmx</DependentUpon>
+    </None>
+    <None Include="WinkelDatabaseModel.edmx.diagram">
+      <DependentUpon>WinkelDatabaseModel.edmx</DependentUpon>
+    </None>
+    <None Include="WinkelDatabaseModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>WinkelDatabaseModel.cs</LastGenOutput>
+      <DependentUpon>WinkelDatabaseModel.edmx</DependentUpon>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="WinkelDatabaseModel.edmx.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
